added help stuff

--- a/SerialCommunicator/SerialCommunicator.csproj
+++ b/SerialCommunicator/SerialCommunicator.csproj
@@ -77,11 +77,15 @@
     <Compile Include="Utilities\CommandParam.cs" />
     <Compile Include="Utilities\InverseBooleanConverter.cs" />
     <Compile Include="Utilities\ObjectNullToControlEnabledConverter.cs" />
+    <Compile Include="ViewModels\HelpViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SerialMessageModel.cs" />
     <Compile Include="ViewModels\SerialsListViewModel.cs" />
     <Compile Include="ViewModels\SerialViewModel.cs" />
     <Compile Include="ViewModels\TransceiveSettingsViewModel.cs" />
+    <Compile Include="Windows\HelpWindow.xaml.cs">
+      <DependentUpon>HelpWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Controls\SerialItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,6 +113,10 @@
     <Page Include="Themes\LightTheme.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\HelpWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -175,5 +183,6 @@
   <ItemGroup>
     <Resource Include="Resources\AppIcons\connectIcon.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
