Implemented a graph. Currently it isn't very good. only use while connected to 1 serial port, as the graph 'processes' any received message within the program, not from a certain serialport. this will change soon when i can be bothered to change it lol

--- a/SerialCommunicator/SerialCommunicator.csproj
+++ b/SerialCommunicator/SerialCommunicator.csproj
@@ -42,6 +42,8 @@
     <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -65,18 +67,55 @@
     <Compile Include="Controls\SerialMessage.xaml.cs">
       <DependentUpon>SerialMessage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Graph\DataPoints\DoubleDataPoint.cs" />
+    <Compile Include="Graph\DataPoints\FloatDataPoint.cs" />
+    <Compile Include="Graph\DataPoints\Int32DataPoint.cs" />
+    <Compile Include="Graph\DataPoints\TimeSpanDataPoint.cs" />
+    <Compile Include="Graph\EventArguments\RangeChangedEventArgs.cs" />
+    <Compile Include="Graph\ExtensionMethods.cs" />
+    <Compile Include="Graph\GraphCommand.cs" />
+    <Compile Include="Graph\GraphControl.cs" />
+    <Compile Include="Graph\GraphController.cs" />
+    <Compile Include="Graph\GraphDataPoint.cs" />
+    <Compile Include="Graph\GraphDataPointHelper.cs" />
+    <Compile Include="Graph\GraphDataPointTypeConverter.cs" />
+    <Compile Include="Graph\GraphDataQueue.cs" />
+    <Compile Include="Graph\GraphObject.cs" />
+    <Compile Include="Graph\GraphRange.cs" />
+    <Compile Include="Graph\GraphRenderer.cs" />
+    <Compile Include="Graph\GraphTransform.cs" />
+    <Compile Include="Graph\IGraphComponent.cs" />
+    <Compile Include="Graph\IGraphController.cs" />
+    <Compile Include="Graph\IGraphDataPoint.cs" />
+    <Compile Include="Graph\IGraphDataSeries.cs" />
+    <Compile Include="Graph\IGraphRenderer.cs" />
+    <Compile Include="Graph\IGraphSurface.cs" />
+    <Compile Include="Graph\Renderers\ScrollingLineRenderer.cs" />
+    <Compile Include="Graph\WpfGraphAxisControl.cs" />
+    <Compile Include="Graph\WpfGraphAxisPanel.cs" />
+    <Compile Include="Graph\WpfGraphAxisTickData.cs" />
+    <Compile Include="Graph\WpfGraphComponentBase.cs" />
+    <Compile Include="Graph\WpfGraphController.cs" />
+    <Compile Include="Graph\WpfGraphDataSeries.cs" />
+    <Compile Include="Graph\WpfGraphGridLines.cs" />
+    <Compile Include="Graph\WpfGraphSurface.cs" />
     <Compile Include="SerialFileLogger\MessageWriter.cs" />
     <Compile Include="Utilities\BaseViewModel.cs" />
+    <Compile Include="Utilities\CharAlphabeticalPositions.cs" />
     <Compile Include="Utilities\Command.cs" />
     <Compile Include="Utilities\CommandParam.cs" />
     <Compile Include="Utilities\InverseBooleanConverter.cs" />
     <Compile Include="Utilities\ObjectNullToControlEnabledConverter.cs" />
+    <Compile Include="ViewModels\GraphWindowViewModel.cs" />
     <Compile Include="ViewModels\HelpViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SerialMessageModel.cs" />
     <Compile Include="ViewModels\SerialsListViewModel.cs" />
     <Compile Include="ViewModels\SerialViewModel.cs" />
     <Compile Include="ViewModels\TransceiveSettingsViewModel.cs" />
+    <Compile Include="Windows\GraphWindow.xaml.cs">
+      <DependentUpon>GraphWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\HelpWindow.xaml.cs">
       <DependentUpon>HelpWindow.xaml</DependentUpon>
     </Compile>
@@ -104,9 +143,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Themes\GraphStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\LightTheme.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\GraphWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\HelpWindow.xaml">
       <SubType>Designer</SubType>
